--- a/A-3/css/style.css
+++ b/A-3/css/style.css
@@ -7,16 +7,23 @@ li {list-style: none;}
 #wrap {width: 1200px;}
 .clearfix::after, .clearfix::before {display: block; content: ''; clear: both;}
 
+/* modal */
+#modal {position: absolute; width: 100%; height: 100%; z-index: 999; background: rgba(0,0,0,0.7); display: none;}
+.popup {position: absolute; left: 50%; top: 50%; padding: 20px; width: 500px; height: 300px; background: #fff; transform: translate(-50%, -50%);}
+.m-cont {margin-top: 20px;}
+.popup input {position: absolute; width: 50px; height: 30px; bottom: 20px; right: 20px; cursor: pointer;}
+
 /* header */
 #header {width: 1200px;}
 .logo {float: left; width: 240px; height: 100px;}
 .logo img {margin: 30px 20px 30px 20px;}
 
-.menu {position: relative; float: right; width: 600px; height: 40px; margin-top: 30px; margin-right: 20px;}
-.menu li {float: left; width: 150px; height: 40px; background: #ffffff;}
+.menu {position: relative; z-index: 2; float: right; width: 600px; height: 40px; margin-top: 30px; margin-right: 20px;}
+.menu li {float: left; width: 150px; height: 40px; background: #fff;}
 .menu li a {display: block; text-align: center; line-height: 40px; font-weight: bold;}
-.menu li a:hover {background: #30a3f3;}
+.menu a:hover {background: #0066ad; color:#fff;}
 .submenu {display: none;}
+.submenu a:hover {background: #30a3f3; color: #fff;}
 
 
 /* slide */
@@ -30,14 +37,34 @@ li {list-style: none;}
 
 /* contents */
 #contents {width: 1200px;}
-.notice {float: left; width: 400px; height: 200px;}
-.banner {float: left; width: 400px; height: 200px;}
-.shortcut {float: left; width: 400px; height: 200px;}
+.con1 {float: left; width: 380px; height: 180px; padding: 10px;} 
+.con1 a {display: block;}
+.tab-btn {width: 380px; height: 40px;}
+.tab-btn li {float: left; width: 150px; height: 40px; text-align: center; line-height: 40px; background: #ddd; border: 1px solid #ccc; border-bottom: 0;}
+.tab-btn li:first-child {border-right: 0;}
+.tab-btn li.on {background: #fff;}
+.tab-cont {position: relative; width: 360px; height: 120px; padding: 10px; border: 1px solid #ccc;}
+.notice li {width: 360px; height: 30px; line-height: 30px;}
+.notice li span {position: absolute; right: 10px;}
+.notice li a:hover {background: #ddd; height: 30px;}
+.gallery li {float: left; width: 120px; height: 120px; text-align: center;}
+.gallery span {display: block;}
+
+.con2 {position: relative; float: left; width: 400px; height: 200px;}
+.con2 img {transform: scale(0.9, 0.9);}
+.con2 h2 {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); color: #fff; width: 200px; height: 60px; text-align: center; line-height: 60px; background: rgba(1,1,1,0.5);}
+
+.con3 {position: relative; float: left; width: 400px; height: 200px;}
+.con3 img {transform: scale(0.9, 0.9);}
+.con3 h2 {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); color: #fff; width: 200px; height: 60px; text-align: center; line-height: 60px; background: rgba(1,1,1,0.5);}
 
 /* footer */
 #footer {width: 1200px;}
 .btlogo {float: left; width: 200px; height: 100px;}
+.btlogo img {margin-top: 30px;}
 .btwrap {float: left; width: 1000px; height: 100px;}
-.btmenu {width: 1200px; height: 50px;}
-.copyright {width: 1200px; height: 50px;}
+.btmenu {width: 360px; height: 50px;}
+.btmenu li {float: left; width: 120px; height: 50px; text-align: center; line-height: 50px;}
+.btmenu a:hover {text-decoration: underline;}
+.copyright {width: 1000px; height: 50px; text-align: center; line-height: 50px;}
 
