--- a/A-1/css/style.css
+++ b/A-1/css/style.css
@@ -14,7 +14,7 @@ li {list-style: none;}
 .menu {position: relative; z-index: 2; float: right; width: 600px; height: 40px; margin-top: 30px; margin-right: 10px;  background: #ff98fa;}
 .menu li {float: left; width: 150px; height: 40px; }
 .menu li a {display: block; width: 150px; height: 40px; line-height: 40px; text-align: center; background: #e6e;}
-.menu li a:hover {background: rgba(160,40,160,0.7);}
+.menu li a:hover {background: rgba(160,40,160,1); color: #fff;}
 .submenu {display: none;}
 .submenu li a {background: #ebe;}
 
@@ -35,18 +35,33 @@ li {list-style: none;}
 .tab-btn li {float: left; width: 100px; height: 40px; text-align: center; line-height: 40px; border: 1px solid #ddd; background: #eee;}
 .tab-btn li:first-child {border-right: 0;}
 .tab-btn li.on {background: #fff;}
-.tab-cont {position: relative; width: 380px; height: 140px; border: 1px solid #ddd;}
-.notice li {width: 380px; height: 30px;}
-.notice span {position: absolute; right: 0; width: 380px; height: 30px;}
+.tab-cont {width: 360px; height: 120px; border: 1px solid #ddd; padding: 10px;}
+.notice {display: none;}
+.notice li {position: relative; width: 360px; height: 30px;}
+.notice span {position: absolute; right: 0;}
+.notice a {display: block;}
+.notice a:hover {font-weight: bold;}
+.gallery li {float: left; width: 120px; height: 115px; text-align: center; padding-top: 5px;}
+.gallery span {display: block; height: 15px;}
+.gallery img:hover {opacity: 0.5;}
 
+.con2 {position: relative; float: left; width: 380px; height: 180px; padding: 10px;}
+.con2:hover {opacity: 0.5;}
+.con2 img {width: 380px; height: 180px;}
+.con2 h2 {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 200px; height: 40px; text-align: center; line-height: 40px; background: rgba(0,0,0,0.7); color: #fff;}
 
-
-
-.con2 {float: left; width: 400px; height: 200px;}
-.con3 {float: left; width: 400px; height: 200px;}
+.con3 {position: relative; float: left; width: 380px; height: 180px; padding: 10px;}
+.con3:hover {opacity: 0.5;}
+.con3 img {width: 380px; height: 180px;}
+.con3 h2 {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 200px; height: 40px; text-align: center; line-height: 40px; background: rgba(0,0,0,0.7); color: #fff;}
 
 /* footer */
 #footer {width: 1200px;}
 .btlogo {float: left; width: 200px; height: 100px;}
+.btlogo img {width: 200px; height: 40px; margin-top: 30px;}
 .copyright {float: left; width: 800px; height: 100px;}
+.copyright h3 {width: 800px; height: 40px; text-align: center; margin-top: 50px;}
 .sns {float: left; width: 200px; height: 100px;}
+.sns span {font-size: 16px; font-weight: bold;}
+.sns li {float: left; width: 60px; height: 60px; padding: 3px;}
+.sns img:hover {opacity: 0.5;}
