--- a/A-1/css/style.css
+++ b/A-1/css/style.css
@@ -18,6 +18,12 @@ li {list-style: none;}
 .submenu {display: none;}
 .submenu li a {background: #ebe;}
 
+/* modal */
+#modal {position: absolute; z-index: 999; width: 100%; height: 100%; background: rgba(0,0,0,0.7); display: none;}
+.popup {position: absolute; width: 400px; height: 300px; left: 50%; top: 50%; transform: translate(-50%, -50%); background: #fff;}
+.popup h2 {background: #333; color: #fff; padding: 10px;}
+.popup span {display: block; padding: 10px; }
+.popup input {position: absolute; right: 10px; bottom: 10px; width: 50px; height: 30px; line-height: 30px; cursor: pointer;}
 
 /* slide */
 #slide {width: 1200px; height: 300px;}
