--- a/B-2/css/style.css
+++ b/B-2/css/style.css
@@ -19,19 +19,43 @@ li {list-style: none;}
 
 /* slide */
 #slide {width: 1200px; height: 300px; background: #666;}
-.imglist {position: relative; width: 1200px; height: 300px;}
+.imglist {overflow: hidden; position: relative; width: 1200px; height: 300px;}
 .imglist li {position: absolute; top: 0; left: 0; width: 1200px; height: 300px;}
+.imglist li:nth-child(2) {top: 300px;}
+.imglist li:nth-child(3) {top: 300px;}
 .imglist h3 {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 300px; height: 50px; text-align: center; line-height: 50px; background-color: rgba(0,0,0,0.7); color: #fff; font-weight: bold;}
 
 /* contents */
 #contents {width: 1200px; height: 200px;}
-.con1 {float: left; width: 400px; height: 200px;}
-.con2 {float: left; width: 400px; height: 200px;}
-.con3 {float: left; width: 400px; height: 200px;}
+.con1 {float: left; width: 380px; height: 180px; padding: 10px;}
+.btn {margin : 0; width: 150px; height: 40px; text-align: center; line-height : 40px; border: 1px solid #ccc; border-bottom : 0;}
+.notice {border : 1px solid #ccc;}
+.notice li {width : 378px; height: 35px;}
+.notice li div {float : left; width : 238px; height: 35px; padding-left : 10px; line-height: 35px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
+.notice span {float : right; width : 120px; height: 35px; text-align: right; padding-right : 10px; line-height: 35px;}
+.notice div:hover {text-decoration: underline;}
+.con2 {float: left; width: 380px; height: 180px; padding: 10px;}
+.gallery {border : 1px solid #ccc; width: 378px; height: 138px;}
+.gallery li {float : left; width : 100px; height: 100px; margin: 19px 10px 19px 15px;}
+.gallery img {width: 100px;}
+.gallery img:hover {opacity: 0.5;}
+.con3 {position: relative; float: left; width: 380px; height: 180px; padding: 10px;}
+.con3 img {width: 380px; height: 180px;}
+.con3 img:hover {opacity: 0.5;}
+.con3 h3 {position: absolute; width : 150px; height : 40px; text-align: center; line-height: 40px; top: 50%; left : 50%; transform: translate(-50%, -50%); background-color: rgba(0,0,0,0.7);; color : #fff;}
 
 /* footer */
-#footer {width: 100%; height: 100px;}
-.copyright {float: left; width: 200px;}
-.bt-wrap {float: right; height: 100px;}
-.sns {height: 50px;}
-.site {height: 50px;}
+#footer {width: 100%; height: 100px; text-align: center;}
+.copyright {display: inline-block; width: 600px; text-align: center; font-size: 20px; font-weight : bold; line-height: 100px;}
+.bt-wrap {float: right; width : 200px; height: 100px;}
+.sns {width : 200px; height: 50px;}
+.sns li {float : left; width: 55px; margin-right: 10px;}
+.site {width : 200px; height: 50px;}
+.site select {float : right; margin-right: 15px; margin-top: 10px;}
+
+/* modal */
+#modal {display: none; width : 100%; height: 100%; position: absolute; background-color: rgba(0,0,0,0.7); z-index: 999;}
+.popup {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width : 400px; height: 200px; background-color: #fff;}
+.popup h3 {padding : 10px; background-color: #aaa;}
+.popup div {padding: 10px;}
+.popup input {position: absolute; right : 10px; bottom: 10px; cursor: pointer;}
