--- a/B-1/css/style.css
+++ b/B-1/css/style.css
@@ -8,10 +8,10 @@ li {list-style: none;}
 .clearfix::after, .clearfix::before {display: block; content: ''; clear: both;}
 
 /* header */
-header {width: 100%; height: 100px;}
-.logo {float: left; width: 200px; height: 100px;}
+header {position: relative; width: 100%; height: 100px;}
+.logo {position: absolute; width: 200px; height: 100px;}
 .logo img {width: 200px; height: 40px; margin-top: 30px;}
-.menu {float: right; width: 600px; height: 40px; margin-top: 30px;margin-right: 20px;}
+.menu {position: absolute; width: 600px; height: 40px; top: 30px;right: 20px; z-index: 3;}
 .menu li {float: left; width: 150px; height: 40px; text-align: center; line-height: 40px; background: #0076be;}
 .menu a {display: block; color: #fff;}
 .menu a:hover {background: #e66b27;}
@@ -56,10 +56,17 @@ header {width: 100%; height: 100px;}
 
 /* footer */
 footer {position: relative; width: 100%; height: 100px;}
-.bt-logo {position: absolute; top: 0; left: 0; width: 200px; height: 100px;}
+.bt-logo {position: absolute; width: 200px; height: 100px;}
 .bt-logo img {filter:grayscale(); margin-top: 30px;}
 .bt-wrap {position: absolute; top: 0; left: 50%; transform: translate(-50%, 0);height: 100px;}
-.bt-menu {height: 50px;}
+.bt-menu {text-align: center; height: 50px;}
+.bt-menu {width: 300px;}
 .bt-menu li {float: left; width: 100px; height: 50px; line-height: 50px; text-align: center;}
-.copyright {text-align: center; height: 50px}
+.copyright {text-align: center; height: 50px; font-weight: bold; font-size: 20px;}
 
+/* modal */
+#modal {display: none; width : 100%; height: 100%; position: absolute; background-color: rgba(0,0,0,0.7); z-index: 999;}
+.popup {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width : 400px; height: 300px; background-color: #fff;}
+.popup h3 {padding : 10px; background-color: #aaa;}
+.popup div {padding: 10px;}
+.popup input {position: absolute; right : 10px; bottom: 10px; cursor: pointer;}
