--- a/B-1/css/style.css
+++ b/B-1/css/style.css
@@ -8,7 +8,8 @@ li {list-style: none;}
 .clearfix::after, .clearfix::before {display: block; content: ''; clear: both;}
 
 /* header */
-header {position: relative; width: 100%; height: 100px;}
+header {width: 100%; height: 100px; background: #0076be;}
+.h-wrap {position: relative; width: 1200px; height: 100px; background: #0076be;}
 .logo {position: absolute; width: 200px; height: 100px;}
 .logo img {width: 200px; height: 40px; margin-top: 30px;}
 .menu {position: absolute; width: 600px; height: 40px; top: 30px;right: 20px; z-index: 3;}
@@ -55,9 +56,10 @@ header {position: relative; width: 100%; height: 100px;}
 .con3 span {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 150px; height: 40px; text-align: center; line-height: 40px; background: rgba(0,0,0,0.7); color: #fff; font-size: 20px;}
 
 /* footer */
-footer {position: relative; width: 100%; height: 100px;}
+footer {width: 100%; height: 100px; background: #0076be;}
+.f-wrap {position: relative; width: 1200px; height: 100px; }
 .bt-logo {position: absolute; width: 200px; height: 100px;}
-.bt-logo img {filter:grayscale(); margin-top: 30px;}
+.bt-logo img {filter:grayscale(1); margin-top: 30px;}
 .bt-wrap {position: absolute; top: 0; left: 50%; transform: translate(-50%, 0);height: 100px;}
 .bt-menu {text-align: center; height: 50px;}
 .bt-menu {width: 300px;}
